# CSC121

./: .gitignore  CMakeLists.txt
Week2/: bowling.cpp
week2/: bowling.cpp
week3/: launch.cpp
week3/codeFromLecture/: bowlingBall.cpp  bowlingBall2.cpp  bowlingBall3.cpp  bowlingBall3a.cpp  bowlingBalla.cpp  sphere3.cpp  sphere4.cpp  sphere5.cpp  sphere5a.cpp
week4/: shapes.cpp
week4/codeFromLecture/: areaOfRectangle.cpp  bowlingFail.cpp  hello.cpp  homework.txt  menu.cpp  menu2.cpp  menu5.cpp
week6/: readDouble.cpp
week7/: attraction.cpp
week8/: Midterm
week8/midtermCodes/: q4.cpp  q5.cpp  q8.cpp
week8/shapes2/: Cone.h  Cube.h  Cylinder.h  Prism.cpp  Prism.h  Sphere.h  shapes2.cpp
