cmake_minimum_required(VERSION 3.24)
project(CSC121)

set(CMAKE_CXX_STANDARD 20)
# Week 2
add_executable(bowling_program week2/bowling.cpp)


# Week 3
add_executable(launch_program week3/launch.cpp)
# Code from Lecture
add_executable(bowlingBall_program week3/codeFromLecture/bowlingBall.cpp)
add_executable(bowlingBall2_program week3/codeFromLecture/bowlingBall2.cpp)
add_executable(bowlingBall3_program week3/codeFromLecture/bowlingBall3.cpp)
add_executable(bowlingBall3a_program week3/codeFromLecture/bowlingBall3a.cpp)
add_executable(bowlingBalla_program week3/codeFromLecture/bowlingBalla.cpp)
add_executable(sphere3_program week3/codeFromLecture/sphere3.cpp)
add_executable(sphere4_program week3/codeFromLecture/sphere4.cpp)
add_executable(sphere5_program week3/codeFromLecture/sphere5.cpp)
add_executable(sphere5a_program week3/codeFromLecture/sphere5a.cpp)



# Week 4
add_executable(shapes_program week4/shapes.cpp)
# Code from Lecture
add_executable(menu_program week4/codeFromLecture/menu.cpp)
add_executable(menu2_program week4/codeFromLecture/menu2.cpp)
add_executable(hello_program week4/codeFromLecture/hello.cpp)
add_executable(bowlingFail_program week4/codeFromLecture/bowlingFail.cpp)
add_executable(areaOfRectangle_program week4/codeFromLecture/areaOfRectangle.cpp
        week6/readDouble.cpp)
add_executable(menu5_program week4/codeFromLecture/menu5.cpp)
